--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^4.11.0"
+    "webpack": "^4.11.0",
+    "yarn": "^1.7.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -45,5 +46,4 @@
     "url": "https://github.com/homelissa/hipcamp/issues"
   },
   "homepage": "https://github.com/homelissa/hipcamp#readme"
-
 }
