Add booking container and styling

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.1.2",
